fix underline and squared button on mobile

--- a/src/components/CTARow/ctarow.module.css
+++ b/src/components/CTARow/ctarow.module.css
@@ -4,6 +4,7 @@
     backface-visibility: hidden;
     padding-top: 0;
     padding-bottom: 35px;
+    text-align: center;
 }
 
 .title {
@@ -20,7 +21,7 @@
 
 
 .button {
-    display: table;
+    display: inline-block;
     margin-left: auto;
     margin-right: auto;
     padding: 8px 16px;
