--- a/src/components/Client/client.module.css
+++ b/src/components/Client/client.module.css
@@ -16,10 +16,9 @@
   cursor: pointer;
 }
 
-.client.hasInfo span {
+.hasInfo span {
   display: inline;
   padding-bottom: 5px;
-  text-shadow: 2px 2px white, 2px -2px white, -2px 2px white, -2px -2px white;
   background-size: 1px 1em;
   box-shadow: inset 0 -0.175em white, inset 0 -0.185em #000;
 }
@@ -57,6 +56,10 @@
   .client {
     font-size: 70px;
     margin-right: 15px;
+  }
+
+  .hasInfo span {
+    text-shadow: 2px 2px white, 2px -2px white, -2px 2px white, -2px -2px white;
   }
 
   .panel {
